# dochan

./: .gitignore  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  NOTICE  README.md  RELEASING.md  SECURITY.md  pyproject.toml
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: pypi-release.yml
dochan/: __init__.py  batch.py  cli.py  config.yaml  constants.py  control_char.py  conversion.py  reader.py
dochan/fallback/: filter_server.py
dochan/hwp/: bin_data.py  doc_info.py  header.py  section.py
dochan/hwp/records/: char_shape.py  ctrl_header.py  para_char_shape.py  para_header.py  para_text.py  style.py  table.py
dochan/hwpx/: parser.py
dochan/model/: document.py  equation.py  header_footer.py  image.py  style.py  table.py
dochan/office_binary/: __init__.py  doc.py  ppt.py  structure.py  xls.py
dochan/ooxml/: __init__.py  core.py  docx.py  package.py  pptx.py  xlsx.py
dochan/output/: json_out.py  markdown.py  plain_text.py
dochan/quality/: batch_validate.py  checker.py  comparator.py  cross_validator.py
dochan/tests/: test_apache_poi_fixture_index_script.py  test_char_shape.py  test_conversion_model.py  test_doc_reader.py  test_fixture_probe_script.py  test_ppt_reader.py  test_pptx_reader.py  test_quality.py  test_summarize_competitive_index_script.py  test_xls_reader.py  test_xlsx_reader.py
dochan/utils/: error_recovery.py  logger.py  ocr.py  safe_decompress.py
docs/benchmarks/: 2026-06-20-competitive-benchmark.md  2026-06-20-ooxml-improvement-loop.md
docs/superpowers/plans/: 2026-06-20-office-native-phase-1-docx.md
docs/superpowers/specs/: 2026-06-20-native-universal-document-conversion-design.md
scripts/: benchmark_competitors.py  build_apache_poi_fixture_index.py  build_apache_tika_fixture_index.py  build_github_ooxml_fixture_index.py  download_public_ooxml_corpus.py  generate_ooxml_benchmark_corpus.py  run_apache_poi_probe.py  run_fixture_probe.py  run_isolated_competitor_benchmark.py  summarize_competitive_index.py
tests/: sample_categories.yaml  test_apache_poi_probe_script.py  test_apache_tika_fixture_index_script.py  test_competitive_benchmark_script.py  test_control_char.py  test_doc_reader.py  test_docx_reader.py  test_github_ooxml_fixture_index_script.py  test_isolated_competitor_benchmark_script.py  test_ooxml_benchmark_corpus.py  test_ooxml_package.py  test_ppt_reader.py  test_pptx_reader.py  test_public_ooxml_corpus_script.py  test_xls_reader.py
